updated partners component to make sure they are always square and will appear in rows of 2 on mobile viewports

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -160,3 +160,23 @@ $menu-label-color: $white-ter
     max-width: 100%
     max-height: 100% 
     height: auto
+
+.partners__image
+  width: 100%
+  position: relative
+
+  &::before
+    content: ''
+    padding-top: 100%
+    display: block
+
+  img
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    max-width: 100%
+    max-height: 100%
+    margin: auto
+    object-fit: cover
